--- a/DangHoangKNU.html
+++ b/DangHoangKNU.html
@@ -10,12 +10,17 @@
 
     <a-plane  repeat= "10" src="ceilling1.jpg" position="0 0 0" rotation="-90 0 0" width="22" height="27"></a-plane>
     <a-plane  repeat= "10" src="floor2.jpg" position="0 10 0" rotation="90 0 0" width="22" height="27"></a-plane>
-    <a-box repeat="10" src="wall1.jpg" position="0 3 -13.5" width="22" height="10" depth="0.155" ></a-box>
-    <a-box repeat="10" src="wall1.jpg" position="0 3 13.5" rotation="0 180 0" rotation="0 0 0"width="22" height="11" depth="0.155" ></a-box>
-    <a-box repeat="10" src="wall1.jpg" position="-11 3 0" rotation="0 90 0" rotation="0 0 0"width="27" height="11" depth="0.155" ></a-box>
-    <a-box repeat="10" src="wall1.jpg" position="11 3 0" rotation="0 -90 0" rotation="0 0 0"width="27" height="11" depth="0.155" ></a-box>
-    <a-box repeat="10" color="gray" position="0 0 0" rotation="0 -90 0" rotation="0 0 0"width="2" height="6" depth="0.55" ></a-box>
-
+    <a-box repeat="10" src="wall1.jpg" position="0 5 -13.5" width="22" height="10" depth="0.155" ></a-box>
+    <a-box repeat="10" src="wall1.jpg" position="0 5 13.5" rotation="0 180 0" width="22" height="10" depth="0.155" ></a-box>
+    <a-box repeat="10" src="wall1.jpg" position="-11 5 0" rotation="0 90 0" width="27" height="10" depth="0.155" ></a-box>
+    <a-box repeat="10" src="wall1.jpg" position="11 5 3.5" rotation="0 -90 0" width="21" height="10" depth="0.155" ></a-box> // wall right
+    <a-box repeat="10" color="white" position="-11 5 -5" rotation="0 -90 0" width="1" height="10" depth="0.5" ></a-box> //xa ben trai
+    <a-box repeat="10" color="white" position="-11 5 5" rotation="0 -90 0" width="1" height="10" depth="0.5" ></a-box> // left
+    <a-box repeat="10" color="white" position="11 5 5" rotation="0 -90 0" width="1" height="10" depth="0.5" ></a-box> // xa ben phai
+    <a-box repeat="10" color="white" position="11 5 -5" rotation="0 -90 0" width="1" height="10" depth="0.5" ></a-box> //right
+    <a-box repeat="0.55" src="door1.jpg" position="11 5 -7" rotation="0 180 0" width="2" height="10" depth="0.5" ></a-box> //door
+    <a-box repeat="0.55" src="door1.jpg" position="11 5 -9" rotation="0 -180 0" width="2" height="10" depth="0.5" ></a-box> //door
+    <a-box repeat="1" src="window1.jpg" position="11 7.5 -12" rotation="0 -90 0" width="3" height="5" depth="0.5" ></a-box> //window
 
 
     <a-sky src="sky1.jpg"></a-sky>
