--- a/DangHoangKNU.html
+++ b/DangHoangKNU.html
@@ -29,7 +29,7 @@
     <a-box color="gray" position="-10.5 5 -13" rotation="0 0 0" width="1" height="10" depth="1" ></a-box> // xa ben phai
     <a-box repeat="0.5" src="wall1.jpg" position="11 2.5 -12" rotation="0 -90 180" width="3.5" height="5" depth="0.25" ></a-box> // wall right
 
-    <a-sky src="sky1.jpg"></a-sky>
+    <a-sky src="universe.jpg"></a-sky>
 
 
 
